--- a/Silden/Silden/Classes/View Controllers/Show/SInfoEditorVc.xib
+++ b/Silden/Silden/Classes/View Controllers/Show/SInfoEditorVc.xib
@@ -51,6 +51,7 @@
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{11, 41}, {298, 51}}</string>
 								<reference key="NSSuperview" ref="591993872"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="890458851"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -65,6 +66,7 @@
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{20, 49}, {280, 37}}</string>
 								<reference key="NSSuperview" ref="591993872"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="690924650"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -99,6 +101,7 @@
 								<int key="NSvFlags">288</int>
 								<string key="NSFrame">{{11, 222}, {298, 96}}</string>
 								<reference key="NSSuperview" ref="591993872"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="275972409"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -111,13 +114,14 @@
 							<object class="IBUITextView" id="275972409">
 								<reference key="NSNextResponder" ref="591993872"/>
 								<int key="NSvFlags">288</int>
-								<string key="NSFrame">{{20, 228}, {280, 74}}</string>
+								<string key="NSFrame">{{11, 228}, {298, 74}}</string>
 								<reference key="NSSuperview" ref="591993872"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="270520005"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<object class="NSColor" key="IBUIBackgroundColor" id="126581729">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MSAxIDEAA</bytes>
+								<object class="NSColor" key="IBUIBackgroundColor">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MCAwAA</bytes>
 								</object>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -135,6 +139,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{11, 12}, {87, 21}}</string>
 								<reference key="NSSuperview" ref="591993872"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="710397392"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -165,6 +170,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{11, 200}, {164, 21}}</string>
 								<reference key="NSSuperview" ref="591993872"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="807402365"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -185,6 +191,7 @@
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{11, 115}, {298, 51}}</string>
 								<reference key="NSSuperview" ref="591993872"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="355793693"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -196,7 +203,10 @@
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
-								<reference key="IBUINormalTitleColor" ref="126581729"/>
+								<object class="NSColor" key="IBUINormalTitleColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MSAxIDEAA</bytes>
+								</object>
 								<object class="NSColor" key="IBUINormalTitleShadowColor" id="167453669">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC41AA</bytes>
@@ -211,6 +221,7 @@
 						</array>
 						<string key="NSFrameSize">{320, 346}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="547004918"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -222,6 +233,7 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{0, 342}, {320, 74}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="437018228"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -236,6 +248,8 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{68, 354}, {247, 50}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -264,6 +278,7 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{8, 354}, {50, 50}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="683073118"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -286,6 +301,7 @@
 				</array>
 				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="591993872"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -320,6 +336,8 @@
 				<int key="NSvFlags">266</int>
 				<string key="NSFrameSize">{320, 44}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<bool key="IBUIOpaque">NO</bool>
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -584,7 +602,74 @@
 			<nil key="sourceID"/>
 			<int key="maxID">37</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">SGrayViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/SGrayViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">SInfoEditorVc</string>
+					<string key="superclassName">SGrayViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="homeButtonTap:">UIButton</string>
+						<string key="keepSlidenButtonTap:">id</string>
+						<string key="selectTuneButtonTap:">UIButton</string>
+						<string key="toolBarDontButtonTap:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="homeButtonTap:">
+							<string key="name">homeButtonTap:</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBActionInfo" key="keepSlidenButtonTap:">
+							<string key="name">keepSlidenButtonTap:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="selectTuneButtonTap:">
+							<string key="name">selectTuneButtonTap:</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBActionInfo" key="toolBarDontButtonTap:">
+							<string key="name">toolBarDontButtonTap:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="descriptionTextView">UITextView</string>
+						<string key="scrollView">UIScrollView</string>
+						<string key="titleTextField">UITextField</string>
+						<string key="toolBar">UIToolbar</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="descriptionTextView">
+							<string key="name">descriptionTextView</string>
+							<string key="candidateClassName">UITextView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="scrollView">
+							<string key="name">scrollView</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="titleTextField">
+							<string key="name">titleTextField</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="toolBar">
+							<string key="name">toolBar</string>
+							<string key="candidateClassName">UIToolbar</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/SInfoEditorVc.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
